# oop2-lab1

./: .gitignore  run.sh
task1/: Makefile  ProcessRunner.cpp  Task.h  TaskRunner.cpp  TaskRunner.h  Timer.cpp  Timer.h  app  main.cpp
task1/src/: Daemon.cpp  Daemon.h  ProcessRunner.h  Task.h  TaskRunner.cpp  TaskRunner.h  Timer.cpp  Timer.h  main.cpp
task1/tasks/bye/: task.cpp
task1/tasks/hello/: task.cpp
task2/: Makefile  app  main.cpp
task3/: Makefile  main.cpp
task4/: Makefile  main.cpp
task5/: CMakeLists.txt  Makefile  main.cpp  spin.sh
task6/: CMakeLists.txt  Makefile  main.cpp
task6/include/: AppState.hpp  CodeGenerators.hpp  ICodeGenerator.hpp  JudgeEngine.hpp  Types.hpp  UIViews.hpp
task6/snippets/quick_sort/: code.c  code.cpp  code.py
task6/snippets/selection_sort/: code.c  code.cpp  code.py
task6/snippets/shaker_sort/: code.c  code.cpp  code.py
task6/src/: JudgeEngine.cpp  ReferenceManager.cpp  UIViews.cpp
